--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ingress-prime-stat",
-    "description": "A lightweight conversion for Ingress Prime stat in TypeScript",
+  "description": "A lightweight conversion for Ingress Prime stat in TypeScript",
   "version": "0.0.0-development-rev",
   "main": "src/main.ts",
   "author": "haloivanid <haloivan.idn@gmail.com>",
@@ -15,9 +15,9 @@
     "yarn": ">=1.22.19"
   },
   "scripts": {
-    "prebuild": "npx rimraf ./dist",
+    "prebuild": "npx rimraf ./lib",
     "build": "tsc -p tsconfig.json",
-    "postbuild": "terser ./dist/main.js -c -m -o ./dist/main.js",
+    "postbuild": "terser ./lib/main.js -c -m -o ./lib/main.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
     "test": "jest",
     "lint": "eslint --ext .ts src --fix",
@@ -30,6 +30,8 @@
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest": "^27.2.3",
@@ -40,5 +42,10 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
