--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ingress-prime-stat",
   "description": "A lightweight conversion for Ingress Prime stat in TypeScript",
-  "version": "0.0.0-development-rev",
+  "version": "0.0.0-development",
   "main": "src/main.ts",
   "author": "haloivanid <haloivan.idn@gmail.com>",
   "repository": {
@@ -21,7 +21,8 @@
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
     "test": "jest",
     "lint": "eslint --ext .ts src --fix",
-    "format": "prettier --write \"**/*.ts\""
+    "format": "prettier --write \"**/*.ts\"",
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "dayjs": "^1.11.9"
@@ -38,6 +39,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.2",
     "prettier": "^3.0.1",
+    "semantic-release": "^21.0.7",
     "terser": "^5.19.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
