--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,6 +8,13 @@
     "@semantic-release/npm",
     "@semantic-release/github",
     "@semantic-release/changelog",
-    "@semantic-release/git"
-  ]
+    "@semantic-release/git",
+    [
+      "@semantic-release/exec",
+      {
+        "prepareCmd": "npm run build"
+      }
+    ]
+  ],
+  "pkgRoot": "lib"
 }
