--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ingress-prime-stat",
+  "name": "@haloivanid/ingress-prime-stat",
   "description": "A lightweight conversion for Ingress Prime stat in TypeScript",
-  "version": "0.0.0-development",
+  "version": "1.0.0",
   "main": "src/main.ts",
   "author": "haloivanid <haloivan.idn@gmail.com>",
   "repository": {
@@ -15,9 +15,7 @@
     "yarn": ">=1.22.19"
   },
   "scripts": {
-    "prebuild": "npx rimraf ./lib",
-    "build": "tsc -p tsconfig.json",
-    "postbuild": "terser ./lib/main.js -c -m -o ./lib/main.js",
+    "build": "./scripts/build.sh",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
     "test": "jest",
     "lint": "eslint --ext .ts src --fix",
@@ -29,6 +27,7 @@
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.0.4",
     "@types/jest": "^29.5.3",
