docs(readme): feat readme file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@haloivanid/ingress-prime-stat",
   "description": "A lightweight conversion for Ingress Prime stat in TypeScript",
+  "readme": "README.md",
   "version": "1.0.0",
   "main": "src/main.ts",
   "author": "haloivanid <haloivan.idn@gmail.com>",
