--- a/.releaserc.json
+++ b/.releaserc.json
@@ -12,7 +12,7 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "npm run build"
+        "publishCmd": "npm run build"
       }
     ]
   ],
