--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,16 +5,22 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "@semantic-release/npm",
+    ["@semantic-release/npm", {
+      "npmPublish": false,
+      "pkgRoot": "lib"
+    }],
     "@semantic-release/github",
     "@semantic-release/changelog",
-    "@semantic-release/git",
+    ["@semantic-release/git",
+      {
+        "assets": ["package.json", "CHANGELOG.md"]
+      }
+    ],
     [
       "@semantic-release/exec",
       {
-        "publishCmd": "npm run build"
+        "prepareCmd": "./scripts/build.sh ${nextRelease.version}"
       }
     ]
-  ],
-  "pkgRoot": "lib"
+  ]
 }
