--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@haloivanid/ingress-prime-stat",
+  "name": "ingress-prime-stat",
   "description": "A lightweight conversion for Ingress Prime stat in TypeScript",
   "readme": "README.md",
   "version": "1.0.0",
@@ -16,7 +16,7 @@
     "yarn": ">=1.22.19"
   },
   "scripts": {
-    "build": "./scripts/build.sh",
+    "build": "tsc -p tsconfig.json",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
     "test": "jest",
     "lint": "eslint --ext .ts src --fix",
