--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
+    "commit": "cz",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
-    "test": "jest",
-    "lint": "eslint --ext .ts src --fix",
     "format": "prettier --write \"**/*.ts\"",
-    "semantic-release": "semantic-release"
+    "lint": "eslint --ext .ts src --fix",
+    "semantic-release": "semantic-release",
+    "test": "jest",
+    "test:output": "./scripts/pre-semantic.sh && ./scripts/build.sh && jest"
   },
   "dependencies": {
     "dayjs": "^1.11.9"
@@ -42,6 +44,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.2",
     "prettier": "^3.0.1",
+    "rimraf": "^5.0.1",
     "semantic-release": "^21.0.7",
     "terser": "^5.19.2",
     "ts-jest": "^29.1.1",
