--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
     "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
     "semantic-release": "^21.0.7",
