--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ingress-prime-stat",
   "description": "A lightweight conversion for Ingress Prime stat in TypeScript",
   "readme": "README.md",
-  "version": "1.1.2",
+  "version": "2.4.2",
   "main": "src/main.ts",
   "author": "haloivanid <haloivan.idn@gmail.com>",
   "repository": {
-    "url": "https://github.com/haloivanid/ingress-prime-stat.git",
+    "url": "git+https://github.com/haloivanid/ingress-prime-stat.git",
     "type": "git"
   },
   "license": "MIT",
@@ -46,7 +46,7 @@
     "nodemon": "^3.0.1",
     "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
-    "semantic-release": "^21.0.7",
+    "semantic-release": "^24.2.0",
     "terser": "^5.19.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
